--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -16,7 +16,7 @@ body {
     width: 100%;
     height: 100%;
 
-    .flex-container {
+    .App-flex-container {
         height: 100%;
         display: flex;
         flex-direction: column;
@@ -25,9 +25,10 @@ body {
         align-content: stretch;
         align-items: flex-start;
 
-        .app-header,
-        .app-content,
-        .app-footer {
+        .Header,
+        .Price,
+        .Adjustments,
+        .Footer {
             align-self: stretch;
             display: flex;
             flex-direction: column;
@@ -35,37 +36,42 @@ body {
             justify-content: center;
         }
 
-        .app-header {
+        .Header {
             flex: 1 1 auto;
             text-transform: uppercase;
             font-weight: bold;
-            font-size: 2.5vw;
+            font-size: 2.2vw;
         }
 
-        .app-content {
-            flex: 8 1 auto;
+        .Price {
+            flex: 5 1 auto;
 
-            .current-price-label {
+            .Price-label {
                 font-size: 3vw;
             }
 
-            .current-price-value {
+            .Price-value {
                 font-weight: bold;
                 font-size: 10vw;
             }
         }
 
-        .app-footer {
+        .Adjustments {
+            flex: 4 1 auto;
+            flex-direction: row;
+        }
+
+        .Footer {
             flex: 1 1 auto;
             flex-direction: row;
             text-decoration: none;
             color: inherit;
 
-            .cycle-label {
+            .Footer-cycle-label {
                 font-size: 2vw;
             }
 
-            .cycle-logo {
+            .Footer-cycle-logo {
                 background: url('../img/cycle-logo.png') no-repeat center;
                 background-size: cover;
                 height: 20px;
