--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -27,7 +27,7 @@ body {
 
         .Header,
         .Price,
-        .Adjustments,
+        .PriceInputs,
         .Footer {
             align-self: stretch;
             display: flex;
@@ -56,7 +56,7 @@ body {
             }
         }
 
-        .Adjustments {
+        .PriceInputs {
             flex: 4 1 auto;
             flex-direction: row;
         }
