--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -44,7 +44,7 @@ body {
         }
 
         .Price {
-            flex: 5 1 auto;
+            flex: 7 1 auto;
 
             .Price-label {
                 font-size: 3vw;
@@ -57,8 +57,78 @@ body {
         }
 
         .PriceInputs {
-            flex: 4 1 auto;
+            flex: 2 1 auto;
             flex-direction: row;
+            justify-content: center;
+            align-items: flex-start;
+            padding: 0 8%;
+
+            > div:first-child {
+                margin-right: 80px;
+            }
+
+            > div:last-child {
+                margin-left: 80px;
+            }
+
+            .person-amount,
+            .avg-price {
+                text-align: center;
+
+                .label {
+                    margin-bottom: 20px;
+                }
+            }
+
+            .price-result {
+                flex-direction: column;
+
+                .current-price {
+                    .total-price-value {
+                        text-align: center;
+                        font-weight: bold;
+                        font-size: 24px;
+                        line-height: 32px;
+                    }
+                }
+
+                .currency {
+                    margin-top: 3px;
+                    text-align: center;
+
+                    .currency-select {
+                        margin-left: 10px;
+                        padding: 2px 5px;
+                    }
+                }
+            }
+
+            .input-wrapper {
+                position: relative;
+                height: 32px;
+                width: 128px;
+
+                .total-price-input,
+                .person-amount-input,
+                .avg-price-input {
+                    height: 32px;
+                    width: 128px;
+                    text-align: center;
+                    font-size: 16px;
+                }
+
+                input[type="range"] {
+                    position : absolute;
+                    left : -26px;
+                    top : -64px;
+                    border : 1px solid transparent;
+                    opacity : 0;
+                    cursor : e-resize;
+                    width : 180px;
+                    height : 128px;
+                }
+
+            }
         }
 
         .Footer {
