--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -141,20 +141,44 @@ body {
             text-decoration: none;
             color: inherit;
 
-            .Footer-cycle-label {
-                font-size: 2vw;
-            }
+            .Footer-link {
+                display: flex;
+                flex-direction: row;
+                text-decoration: none;
+                color: inherit;
+                align-items: center;
 
-            .Footer-cycle-logo {
-                background: url('../img/cycle-logo.png') no-repeat center;
-                background-size: cover;
-                height: 20px;
-                width: 20px;
-                margin-left: 5px;
-            }
+                .Footer-label {
+                    font-size: 1.4vw;
+                }
 
-            &:hover {
-                transform: scale(1.1);
+                .Footer-cycle-logo {
+                    background: url('../img/cycle-logo.png') no-repeat center;
+                    background-size: cover;
+                    height: 20px;
+                    width: 20px;
+                    margin-left: 5px;
+                }
+
+                .Footer-github-logo {
+                    background: url('../img/github-logo.png') no-repeat center;
+                    background-size: cover;
+                    height: 20px;
+                    width: 20px;
+                    margin-left: 5px;
+                }
+
+                &:hover {
+                    transform: scale(1.1);
+                }
+
+                &:first-child {
+                    margin-right: 20px;
+                }
+
+                &:last-child {
+                    margin-left: 20px;
+                }
             }
         }
     }
