--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -101,7 +101,7 @@ body {
                     justify-content: space-between;
                     position: relative;
 
-                    input[type="text"] {
+                    input[type="number"] {
                         background: transparent;
                         color: #96C4CA;
                         border-color: #96C4CA;
@@ -114,7 +114,7 @@ body {
                         position: absolute;
                         top: 34px;
                         text-align: right;
-                        right: 20px;
+                        right: 30px;
                         z-index: 0;
                     }
                 }
