Change input bg color to slightly transparent text color

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -99,7 +99,7 @@ body {
           position: relative;
 
           input[type="number"] {
-            background: transparent;
+            background: rgba(150, 196, 202, 0.25);
             color: #96C4CA;
             border-color: #96C4CA;
             font-weight: bold;
