--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -100,7 +100,7 @@ body {
           justify-content: space-between;
           position: relative;
 
-          input[type="number"] {
+          input[type='number'] {
             background: rgba(150, 196, 202, 0.25);
             color: #96c4ca;
             border-color: #96c4ca;
