--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -25,13 +25,14 @@ body {
     align-items: flex-start;
 
     .Header,
-    .Price,
+    .wrapper-div,
     .Footer {
       align-self: stretch;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      flex: 6 1 auto;
+      justify-content: space-around;
     }
 
     .Header {
@@ -41,10 +42,7 @@ body {
       font-size: 2.2vw;
     }
 
-    .Price {
-      flex: 6 1 auto;
-      justify-content: space-around;
-
+    .Ticker {
       .Price-actual {
         justify-content: center;
 
@@ -57,75 +55,76 @@ body {
           font-size: 10vw;
         }
       }
+    }
 
-      .PriceInputs {
+    .Controls {
+      display: flex;
+      flex-direction: row;
+      padding: 0 8%;
+      height: 95px;
+
+      > div:first-child {
+        margin-right: 60px;
+      }
+
+      > div:last-child {
+        margin-left: 60px;
+      }
+
+      .price-result {
         display: flex;
-        flex-direction: row;
-        padding: 0 8%;
-        height: 95px;
+        flex-direction: column;
+        justify-content: space-between;
 
-        > div:first-child {
-          margin-right: 60px;
+        .total-price-value {
+          text-align: center;
+          font-weight: bold;
+          font-size: 24px;
+          line-height: 32px;
         }
 
-        > div:last-child {
-          margin-left: 60px;
-        }
+        .currency {
+          text-align: center;
 
-        .price-result {
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-
-          .total-price-value {
-            text-align: center;
-            font-weight: bold;
-            font-size: 24px;
-            line-height: 32px;
-          }
-
-          .currency {
-            text-align: center;
-
-            .currency-select {
-              margin-left: 10px;
-              padding: 2px 5px;
-            }
-          }
-        }
-
-        .SliderInput {
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          position: relative;
-
-          input[type='number'] {
-            background: rgba(150, 196, 202, 0.25);
-            color: #96c4ca;
-            border-color: #96c4ca;
-            font-weight: bold;
-            padding: 7px 10px;
-            font-size: 16px;
-          }
-
-          .SliderInput-unit {
-            position: absolute;
-            top: 34px;
-            text-align: right;
-            right: 30px;
-            z-index: 0;
+          .currency-select {
+            margin-left: 10px;
+            padding: 2px 5px;
           }
         }
       }
 
-      .duration-details .start-time .reset-button {
-        margin-left: 10px;
+      .SliderInput {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        position: relative;
+
+        input[type='number'] {
+          background: rgba(150, 196, 202, 0.25);
+          color: #96c4ca;
+          border-color: #96c4ca;
+          font-weight: bold;
+          padding: 7px 10px;
+          font-size: 16px;
+        }
+
+        .SliderInput-unit {
+          position: absolute;
+          top: 34px;
+          text-align: right;
+          right: 30px;
+          z-index: 0;
+        }
       }
+    }
+
+    .Duration .start-time .reset-button {
+      margin-left: 10px;
     }
 
     .Footer {
       flex: 1 1 auto;
+      justify-content: center;
       flex-direction: row;
       text-decoration: none;
       color: inherit;
