--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -15,159 +15,14 @@ body {
   width: 100%;
   height: 100%;
 
-  .App-flex-container {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-content: stretch;
-    align-items: flex-start;
+  // @TODO: Move these to css-in-js
+  .cycle-logo {
+    background: url('../img/cycle-logo.png') no-repeat center;
+    background-size: cover;
+  }
 
-    .Header,
-    .wrapper-div,
-    .Footer {
-      align-self: stretch;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      flex: 6 1 auto;
-      justify-content: space-around;
-    }
-
-    .Header {
-      flex: 1 1 auto;
-      text-transform: uppercase;
-      font-weight: bold;
-      font-size: 2.2vw;
-    }
-
-    .Ticker {
-      .Price-actual {
-        justify-content: center;
-
-        .Price-label {
-          font-size: 3vw;
-        }
-
-        .Price-value {
-          font-weight: bold;
-          font-size: 10vw;
-        }
-      }
-    }
-
-    .Controls {
-      display: flex;
-      flex-direction: row;
-      padding: 0 8%;
-      height: 95px;
-
-      > div:first-child {
-        margin-right: 60px;
-      }
-
-      > div:last-child {
-        margin-left: 60px;
-      }
-
-      .price-result {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-
-        .total-price-value {
-          text-align: center;
-          font-weight: bold;
-          font-size: 24px;
-          line-height: 32px;
-        }
-
-        .currency {
-          text-align: center;
-
-          .currency-select {
-            margin-left: 10px;
-            padding: 2px 5px;
-          }
-        }
-      }
-
-      .SliderInput {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        position: relative;
-
-        input[type='number'] {
-          background: rgba(150, 196, 202, 0.25);
-          color: #96c4ca;
-          border-color: #96c4ca;
-          font-weight: bold;
-          padding: 7px 10px;
-          font-size: 16px;
-        }
-
-        .SliderInput-unit {
-          position: absolute;
-          top: 34px;
-          text-align: right;
-          right: 30px;
-          z-index: 0;
-        }
-      }
-    }
-
-    .Duration .start-time .reset-button {
-      margin-left: 10px;
-    }
-
-    .Footer {
-      flex: 1 1 auto;
-      justify-content: center;
-      flex-direction: row;
-      text-decoration: none;
-      color: inherit;
-
-      .Footer-link {
-        display: flex;
-        flex-direction: row;
-        text-decoration: none;
-        color: inherit;
-        align-items: center;
-
-        .Footer-label {
-          font-size: 1.4vw;
-        }
-
-        .Footer-cycle-logo {
-          background: url('../img/cycle-logo.png') no-repeat center;
-          background-size: cover;
-          height: 20px;
-          width: 20px;
-          margin-left: 5px;
-        }
-
-        .Footer-github-logo {
-          background: url('../img/github-logo.png') no-repeat center;
-          background-size: cover;
-          height: 20px;
-          width: 20px;
-          margin-left: 5px;
-        }
-
-        &:hover {
-          transform: scale(1.1);
-        }
-
-        &:first-child {
-          margin-right: 20px;
-        }
-
-        &:last-child {
-          margin-left: 20px;
-        }
-      }
-    }
+  .github-logo {
+    background: url('../img/github-logo.png') no-repeat center;
+    background-size: cover;
   }
 }
