Start implementing the new design

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -7,8 +7,8 @@ html {
 body {
   width: 100%;
   height: 100%;
-  background: #1e1e1e;
-  color: #96c4ca;
+  background: linear-gradient(#06a7bf, #0b7da4);
+  color: #ffffff;
 }
 
 #app {
